--- a/client-novabook/src/main/resources/templates/blocks/user_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/user_block.html
@@ -12,15 +12,22 @@
         <div class="col-2 border"></div>
     </div>
     <div class="row px-4 gap-1 border">
-<!--        <div class="d-grid gap-2 border">-->
-                <button th:if="${visitStatus.equals('guest')}" class="btn btn-primary btn-sm" type="button">Добавить в друзья</button>
-                <button th:if="${!visitStatus.equals('owner')}" class="btn btn-primary btn-sm" type="button">Написать</button>
-<!--        </div>-->
+        <!-- Форма добавления в друзья -->
+        <form class="container-fluid" th:method="post"  th:action="@{'/client/' + ${user.id} + '/friend'}">
+            <button th:if="${visitStatus.equals('guest')}" class="btn btn-primary btn-sm" type="submit">Добавить в друзья</button>
+        </form>
+        <button th:if="${!visitStatus.equals('owner')}" class="btn btn-primary btn-sm" type="submit">Написать</button>
     </div>
 
-            <div class="row px-2 border">
-                <h2 th:text="${user.name}">Name</h2>
-            </div>
+    <div class="row px-2 border">
+        <h2 th:text="${user.name}">Name</h2>
+    </div>
+    <!-- Блок друзей -->
+    <div class="row border">
+        <div class="border" th:each="friend, postStat : ${user.friends}">
+            <img th:src="@{'/avatars/' + ${friend.avatarName}}" alt="mdo" width="35" height="35" class="rounded-circle">
+        </div>
+    </div>
             <div class="row px-2 border">
                 <h5>День рождения:
                     <small class="text-muted" th:text="${#temporals.format(user.birthday, 'dd MMMM yyyy', new java.util.Locale('ru', 'RU'))}"></small>
