--- a/client-novabook/src/main/resources/templates/blocks/wall_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/wall_block.html
@@ -13,7 +13,7 @@
                 <small class="text-muted" th:text="${#temporals.format(onePost.dateCreation, 'dd MMMM yyyy HH:mm', new java.util.Locale('ru', 'RU'))}"></small>
             </div>
             <div class="col-4 border">
-                <h5 class="text-center" th:text="${onePost.postTitle}"></h5>
+
             </div>
             <div th:if="${visitStatus.equals('owner')}" class="col-6 d-grid gap-2 d-md-flex justify-content-md-end border">
                 <!-- Кнопка-триггер модального окна изменения поста-->
@@ -51,7 +51,12 @@
             </div>
         </div>
         <div class="row px-2 border">
-            <p class="text-muted" th:text="${onePost.postText}"></p>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${onePost.postTitle}">PostTitle</h5>
+                    <p class="card-text" th:text="${onePost.postText}">PostText</p>
+                </div>
+            </div>
         </div>
         <div class="row px-2 border">
             <!-- Блок нового комментария к посту -->
@@ -72,8 +77,9 @@
             </nav>
             <!-- Кнопка-триггер выпадающих комментариев -->
             <div class="d-grid gap-2 col-6 mx-auto">
-                <button th:if="*{posts[__${postStat.index}__].comments.size()} != 0" class="btn btn-link" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapseComments' + ${onePost.postId}" th:text="'Посмотреть комментарии(' + *{posts[__${postStat.index}__].comments.size()} + ')'" aria-expanded="false" aria-controls="collapseExample">
+                <button th:if="*{posts[__${postStat.index}__].comments.size()} != 0" class="btn btn-link" type="button" data-bs-toggle="collapse" th:data-bs-target="'#collapseComments' + ${onePost.postId}" aria-expanded="false" aria-controls="collapseExample">
                     Посмотреть комментарии
+                    <span class="badge text-bg-secondary" th:text="*{posts[__${postStat.index}__].comments.size()}"></span>
                 </button>
             </div>
             <!-- Блок выпадающих комментариев -->
@@ -139,7 +145,11 @@
                                 </div>
                             </div>
                             <div class="row px-1 border">
-                                <small class="text-muted" th:text="${comment.text}"></small>
+                                <div class="card">
+                                    <div class="card-body">
+                                        <p class="card-text" th:text="${comment.text}">CommentText</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
