--- a/client-novabook/src/main/resources/templates/blocks/user_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/user_block.html
@@ -1,4 +1,49 @@
 <div th:fragment="userInfo(user)">
+    <!-- Блок входящих заявок в друзья -->
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Заяыки в друзья
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li th:each="responseInvite, riStat : ${user.responseFriendInvites}">
+                <div class="row border">
+                    <div class="col-1">
+                        <img th:src="@{'/avatars/' + ${responseInvite.avatarFrom}}" alt="mdo" width="35" height="35" class="rounded-circle">
+                    </div>
+                    <div class="col-7">
+                        <a class="dropdown-item" th:text="${responseInvite.nameFrom}" th:href="'/client/' + ${responseInvite.userFrom}">User</a>
+                    </div>
+                    <div class="col-4 d-grid d-md-flex justify-content-md-end">
+                        <form class="container-fluid" th:method="post" th:action="@{'/client/' + ${responseInvite.userFrom} + '/friend'}" id="formAddFriend">
+                        </form>
+                        <button class="btn btn-outline-light" form="formAddFriend" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Принять</button>
+                        <button class="btn btn-outline-light" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Отклонить</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <!-- Блок исходящих заявок в друзья -->
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Исходящие запросы в друзья
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li th:each="requestInvite, riStat : ${user.requestFriendInvites}">
+                <div class="row border">
+                    <div class="col-1">
+                        <img th:src="@{'/avatars/' + ${requestInvite.avatarTo}}" alt="mdo" width="35" height="35" class="rounded-circle">
+                    </div>
+                    <div class="col-7">
+                        <a class="dropdown-item" th:text="${requestInvite.nameTo}" th:href="'/client/' + ${requestInvite.userTo}">User</a>
+                    </div>
+                    <div class="col-4 d-grid d-md-flex justify-content-md-end">
+                        <p th:text="${requestInvite.status}"></p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
     <div class="row border">
         <div class="col-2 border"></div>
         <div class="col-8 border d-grid mx-auto">
